--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -1,16 +1,8 @@
 header{
-	height: 65px;
+	display: none;
 }
 a{
 	text-decoration: none;
-}
-#simple-menu{
-	display: none;
-	position: absolute;
-	top: 5px;
-	left: 10px;
-	font-size: 40px;
-	color: #FDFDF0;
 }
 #title{
 	position: absolute;
@@ -37,12 +29,6 @@ a{
 	display: none;
 }
 #profileGraphView{
-	display: none;
-}
-#logInForm{
-	display: none;
-}
-#signUpForm{
 	display: none;
 }
 #lineGraph{
@@ -109,5 +95,37 @@ a{
 	-moz-border-radius: 50%;
 	border-radius: 4px;
 	border-color: #fff;
-
+}
+a{
+	text-decoration: none;
+}
+.page{
+    margin-bottom: 80px;
+}
+ul.side-nav a{
+    width: 100%;
+}
+nav ul a{
+    padding: 0;
+}
+.wrapper{
+	position: absolute;
+    left: 20%;
+}
+.padding-left{
+	padding-left: 20px;
+}
+.modal-buttons{
+	width: 100%;
+	padding-bottom: 10px;
+}
+.profilePic{
+	max-width: 60%;
+	height: auto;
+}
+.padding-top{
+	padding-top: 15px;
+}
+p{
+	text-transform: none;
 }
