--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -7,7 +7,10 @@ a{
 p{
 	font-family: alegreya_sansregular, 'Geneva', 'sans-serif';
 }
-
+li{
+	font-family: alegreya_sansregular, 'Geneva', 'sans-serif';
+	text-transform: capitalize;
+}
 h1, h2, h3, h4, h5, h6 {
 	font-family: arimoregular, 'Geneva', 'sans-serif';
 	text-transform: capitalize;
