Possibly final version

--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -5,10 +5,10 @@ a{
 	text-decoration: none;
 }
 p{
-	font-family: alegreya_sansregular, 'Geneva', 'sans-serif';
+	font-family: arimoregular, 'Geneva', 'sans-serif';
 }
 li{
-	font-family: alegreya_sansregular, 'Geneva', 'sans-serif';
+	font-family: arimoregular, 'Geneva', 'sans-serif';
 	text-transform: capitalize;
 }
 h1, h2, h3, h4, h5, h6 {
