--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6 {
 #stats{
 	display: none;
 }
+#signUpPage{
+	display: none;
+	/*background-color: #FDFDF0;*/
+}
 #graph{
 	display: none;
 }
