--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -47,7 +47,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 #signUpPage{
 	display: none;
-	/*background-color: #FDFDF0;*/
+	background-color: #FDFDF0;
+}
+#signUpPage{
+	background-color: #FDFDF0;
 }
 #graph{
 	display: none;
@@ -161,10 +164,11 @@ p{
 	text-transform: none;
 }
 #backgroundImage{
-    position: fixed; 
+    position: relative; 
     width: 100%; 
     height: 100%; 
     background-color: #4fc3f7;
+    top: 50px;
 }
 
 #page-title{
@@ -248,6 +252,12 @@ p{
 	text-align: center;
 	height: 200px;
 
+}
+#profile .row{
+	margin-bottom: 1px;
+}
+#friendProfile .row{
+	margin-bottom: 1px;
 }
 @font-face {
     font-family: 'alegreya_sansregular';
